--- a/SocialMediaPlatform/appsettings.json
+++ b/SocialMediaPlatform/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=social_media_db;User=root;Password=;"
+  }
 }
