--- a/SocialMediaPlatform/appsettings.json
+++ b/SocialMediaPlatform/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=social_media_db;User=root;Password=;"
+  },
+  "Jwt": {
+    "Secret": "48561247216C8F9CC999BC14DDFFA",
+    "Issuer": "MyAppIssuer",
+    "Audience": "MyAppAudience"
   }
 }
